static/css/style.css
html, body { max-width: 100%; overflow-x: hidden; margin: 0; }
body {font-size: 1.2em; }

sup, sub { font-size:0.6em; }
a { text-decoration: none; }
.flip { transform: scale(-1, -1); display: inline-block; }
.bold { font-weight: bold; }
.italic { font-style: italic; }

h1 { margin: 0 auto; text-align: center; font-weight: 100; color: gray; font-size: 1.5em; }
h2 { margin: 1em auto 0 auto; text-align: center; font-size: 2em; }
h3 { margin-top: 0; text-align: center; }
h4:before { content: '⊢'; }
.section { padding: 2em 0.4em; margin-left: auto; margin-right: auto; display: table; max-width: 40em; }
.subsection { text-indent: 2em; text-align: justify; }
.hidden { display: none; }

.section-wrapper.light-gray { background: #f9f9f9; }
.section-wrapper.darker-gray { background: #ececec; }
.section-wrapper.dark-gray { background: #dfdfdf; }

form{ display: flex; flex-flow: wrap; justify-content: center; }
form input{ padding: 1.1em 1em 0.9em; font-size: 1em; border-radius: 0.8em; margin: 0.2em; }
form input:focus { outline: none; box-shadow: none; }
input[type=text] { border: solid 2px #66a3e0; }
form input[type="submit"]{ border: none; background-color: #66a3e0; color: white; font-weight: bold; }
input[type=text], .code { background-color: #FFF; font-family: "Courier New", sans-serif; }

.code { border-radius: 0.3em; padding: 0.1em 0.2em; white-space: nowrap; box-decoration-break: clone; }
.example { font-style: italic; margin-right: 1em; }

.syntax { line-height: 1.4; }
.syntax td { padding: 0.1em; }
.syntax td:nth-child(1) { text-align: right; padding-right: 1em; }
.syntax td:nth-child(2) { text-align: left; }

.memo ul { margin-top: 0; padding-left: 1.4em; }
.memo li { text-indent: 0; margin-top: 0.4em; list-style: circle; }
.memo ul ul li { list-style: disc; margin-top: 0.1em; }

.tutorial p { margin-top: 1.5em; margin-bottom: 0; }
.tutorial ul { margin-top: 0; margin-left: 3em; }
.tutorial li { text-indent: 0; text-align: left; }
.tutorial .proof-container { margin-top: 0.7em; }
.tutorial ul.examples {list-style: none; margin: 1em 0; padding: 0; }
.tutorial ul.examples li { margin: 0.3em; text-align: center; }

/* PROOF */
.proof-container { position: relative; }
.proof.complete { background:#CFC; }
.proof { text-align:center; text-indent: 0; display:table; white-space:nowrap; padding-left: 2.4em; padding-top:0.5em; padding-bottom:0.3em; margin: auto; }
.proof table { margin: auto; }
.proof table.binary-rule { width:100%; }
.proof td { padding:0; border:0; margin:0; text-align:center; }
.proof .sequent { display: inline-block; margin-top: 0.2em; }
.proof .sibling { display: inline-block; vertical-align:bottom; }
.proof .tagBox { color: #333; vertical-align: top; width: 1.5em; padding-right:2em; }
.proof .tagBox .tag { position:relative; top:-0.6em; text-align: left; margin-left: 0.2em; font-size: 0.9em; }
.proof .tagBox .contraction { top:-0.4em; }
.proof .inference { border-top: 1px solid #000; }
.proof .turnstile { margin: 0 0.3em; }
.turnstile.not-provable { color: red; }
.proof .commaList { display: inline-block; list-style: none; margin: 0; padding: 0; }
.proof .commaList li { display: inline-block; margin-left: 0.2em; }
.proof .commaList li:after { content: ','; margin-left: 0.2em; }
.proof .commaList li:last-child:after { content: ''; }
.proof .binary-connector { margin-left: 3px; margin-right: 3px; }
.proof .clickable:hover { cursor:pointer; }
.proof .highlightableExpr:hover { background: #e0ecf8; }
.proof .main-formula.hoverable:hover .primaryConnector { background: #66a3e0; color: #FFF; }
.proof .main-formula.hoverable:hover .tensor-left, .proof .main-formula.hoverable:hover .tensor-right { position: relative; }
.proof .main-formula.hoverable:hover .tensor-left::before { content: '←'; position: absolute; left: -0.5em; top: 50%; color: #66a3e0; }
.proof .main-formula.hoverable:hover .tensor-right::after { content: '→'; position: absolute; right: -0.5em; top: 50%; color: #66a3e0; }

.export-bar, .auto-reverse-bar { margin-left: auto; margin-right: auto; display: table; }
.export-bar { margin-top: 1em; }
.auto-reverse-bar { margin-top: 0.5em; }
.export-bar span, .auto-reverse-label { color: #777; margin-right: 0.5em; }
img.export { height: 1em; margin: 0 0.2em -0.2em 0.2em; }
img.export:hover { cursor: pointer; }

.pedagogic-error { display: table; padding: 10px; margin: 1em auto; color: #856404; background-color: #fff3cd; border: 1px solid #ffeeba; border-radius: .25rem; text-indent: 0; }
.pedagogic-error .message { display: inline-block; }
.pedagogic-error .close-button { display: inline-block; cursor: pointer; margin-left: 10px; }

/* RULES */
.rules .row { display: flex; flex-wrap: wrap; justify-content: center; align-items: center; }
.rules .proof-container { display: inline-block; vertical-align: bottom; }

.section.footer .subsection { display: table; margin: auto; font-size: 0.8em; }

/* SWITCH BUTTON */
.switch { position: relative; display: inline-block; width: 2.2em; height: 1em; margin-left: 0.2em; }
.switch input { opacity: 0; width: 0; height: 1em; }
.slider { position: absolute; cursor: pointer; top: 0; left: 0; right: 0; bottom: 0; background-color: #ccc; -webkit-transition: .4s; transition: .4s; border-radius: 1em; }
.slider:before { position: absolute; content: ""; height: 0.8em; width: 0.8em; left: 0.2em; bottom: 0.1em; background-color: white; -webkit-transition: .4s; transition: .4s; border-radius: 50%; }
input:checked + .slider { background-color: #66a3e0; }
input:checked + .slider:before { -webkit-transform: translateX(1em); -ms-transform: translateX(1em); transform: translateX(1em);  }

